--- a/public/css/bootstrap-theme.css
+++ b/public/css/bootstrap-theme.css
@@ -4458,7 +4458,7 @@ a.thumbnail:focus {
   width: 0%;
   height: 100%;
   font-size: 12px;
-  color: #ffffff;
+  color: #000;
   text-align: center;
   background-color: #007aff;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
