Started work on ViewTagged UI

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,6 @@ a {
 
 
 /*ck editor*/
-
 .cke_top, .cke_bottom {
     background: #F5F5F5 !important;
     background: -moz-linear-gradient(center top , #F5F5F5, #F5F5F5) repeat scroll 0 0 #F5F5F5 !important;
@@ -21,13 +20,4 @@ a {
     padding: 6px 8px 2px;
 }
 
-.cke_top {
-    border-bottom: 1px solid #cccccc !important;
-}
-
-.cke_chrome {
-    border: 1px solid #cccccc !important;
-    box-shadow: none !important;
-    display: block;
-    padding: 0;
-}
+/*Product Carousel*/
