--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,7 +256,6 @@ table tr th { color: #688a7e;}
 }
 
 /*sidebar navigation*/
-
 #sidebar {
     width: 180px;
     height: 100%;
@@ -456,8 +455,8 @@ ul.sidebar-menu li.active a i {
     position: relative;    
     top: 10px;
 }
-/*chat-*/
 
+/*chat-*/
 .chat-online-profile li a i {
     position: relative;
     left: -12px;
@@ -485,8 +484,8 @@ ul.sidebar-menu li.active a i {
     font-size: 16px;
     border-radius: 0;
 }
-/*main content*/
 
+/*main content*/
 #main-content {
     margin-left: 180px;
 }
@@ -526,7 +525,6 @@ ul.sidebar-menu li.active a i {
     padding: 15px;
     width: 100%;
 }
-
 a.logo {
     font-size: 22px;
     font-weight: 300;
@@ -535,7 +533,6 @@ a.logo {
     margin-top: 15px;
     text-transform: uppercase;
 }
-
 a.logo:hover, a.logo:focus {
     text-decoration: none;
     outline: none;
@@ -547,7 +544,6 @@ a.logo span {
 
 
 /*notification*/
-
 #top_menu .nav > li, ul.top-menu > li {
     float: left;
 }
@@ -564,19 +560,16 @@ a.logo span {
 #task_notificatoin_bar, #mail_notificatoin_bar, #alert_notificatoin_bar{
     margin-top: 7px;
 }
-
 ul.top-menu > li > a {
     color: #fed189;
     font-size: 18px;    
     padding: 2px 6px;
     margin-right: 15px;
 }
-
 ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {    
     background: transparent !important;
     color: #D7D7D7 !important;
 }
-
 .notification-row .badge {
     position: absolute;
     right: -4px;
@@ -598,7 +591,6 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     padding: 3px 5px;
     background: #00a0df;
 }
-
 .dropdown-menu.extended {
     max-width: 300px !important;
     min-width: 160px !important;
@@ -614,7 +606,6 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     padding: 0px;
     margin: 0 0 0 10px;    
 }
-
 .navbar-form .form-control{
     width: 200px;
     height: 30px;
@@ -3372,7 +3363,7 @@ ul.inbox-pagination li {
 }
 /*profile-widget color bg*/
 .profile-widget-info{
-    background: #324c57 !important;
+    background: #404040 !important;
 }
 .profile-widget-success{
     background: #4cd964 !important;
@@ -3408,7 +3399,7 @@ ul.inbox-pagination li {
 }
 
 .bio-graph-heading {
-    background: #263a4f;
+    background: #A0A0A0;
     color: #fff;
     text-align: center;
     font-style: italic;
@@ -3864,7 +3855,7 @@ ul.amounts li {
 }
 
 .tab-bg-info {
-    background: #324c57; 
+    background: #404040; 
 	
     border-bottom: none;
 }
