--- a/public/css/bootstrap-theme.css
+++ b/public/css/bootstrap-theme.css
@@ -671,6 +671,16 @@ pre code {
 .container:after {
   clear: both;
 }
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.row.no-gutters > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
 .row {
   margin-left: -15px;
   margin-right: -15px;
