--- a/pips-web/src/views/home/welcome.hbs
+++ b/pips-web/src/views/home/welcome.hbs
@@ -1,1 +1,9 @@
-<h1>Welcome to {{sitename}}</h1>
+<body>
+<!-- Page Content -->
+    <!--main content start-->
+    <section class="wrapper">
+        <a>
+            Welcome to {{sitename}}
+        </a>
+    </section>
+</body>
