Fixed All pages css

--- a/src/views/submit/SubmitIPA.hbs
+++ b/src/views/submit/SubmitIPA.hbs
@@ -1,5 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
+  <link rel="shortcut icon" href="img/favicon.png">
+
+  <title>Edit Group Page </title>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- bootstrap theme -->
+  <link href="css/bootstrap-theme.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/shop-item.css" rel="stylesheet">
+  <!--external css-->
+  <!-- font icon -->
+  <link href="css/elegant-icons-style.css" rel="stylesheet" />
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <!-- date picker -->
+
+  <!-- color picker -->
+
+  <!-- Custom styles -->
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-responsive.css" rel="stylesheet" />
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+  <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+      <script src="js/lte-ie7.js"></script>
+    <![endif]-->
+
+  <!-- Fix NavBar -->
+  <link rel="stylesheet" href="css/navbarfix.css">
+  <!-- Chat CSS and JS -->
+  <link rel="stylesheet" href="css/Chat.css">
+  <script src="js/ChatFunctionality.js"></script>
+
+</head>
+
 <body>
-<!-- Navigation -->
+
+  <!-- Navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -64,7 +113,7 @@
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
-
+             
             </ul>
           </li>
           <!-- alert notification start-->
@@ -119,7 +168,7 @@
               <input class="form-control" type="text" id="lg">
             </div>
           </li>
-
+         
         </ul>
       </div>
       <!-- notificatoin dropdown end-->
@@ -134,82 +183,97 @@
         <div class="row ">
           <div class="col-lg-14">
             <!-- Page Content -->
-
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-university"></i>Submit IPA</h3>
+                  <h3 class="page-header"><i class="fa fa-calendar"></i> Edit Event Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Project Page</li>
-                    <li><i class="fa fa-university"></i>Submit IPA</li>
+                    <li><i class="fa fa-tasks"></i>Event Pages</li>
+                    <li><i class="fa fa-calendar"></i>Edit Event Page</li>
                   </ol>
                 </div>
               </div>
-
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
-                    <header class="panel-heading">
-                      Project Summary
+                    <header class="panel-heading">Event Summary
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Name of Project</label>
-                          <div class="col-sm-10">
-                            <p class="form-control-static">Test Project</p>
+                          <label class="col-sm-2 control-label">Event Name</label>
+                          <div class="col-sm-8">
+                            <p class="form-control-static">Project-palooza</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" id="edit-button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Project Owner</label>
-                          <div class="col-sm-10">
+                          <label class="col-sm-2 control-label">Event Administrator</label>
+                          <div class="col-sm-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Project Description</label>
-                          <div class="col-sm-10">
-                            <p class="form-control-static">Test project description</p>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Project Tags</label>
-                          <div class="col-lg-10">
-                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Robots,Biology" />
+                          <label class="col-sm-2 control-label">Event Description</label>
+                          <div class="col-sm-8">
+                            <p class="form-control-static">Things happen in places</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Project Page Creator Email</label>
+                          <label class="col-sm-2 control-label">Event Date</label>
+                          <div class="col-sm-8">
+                            <p class="form-control-static">10-12-2015</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Event Picture</label>
+                          <div class="col-sm-2">
+                            <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
+                          </div>
+                          <div class="col-sm-6">
+                            <input type="file" id="exampleInputFile">
+                            <p class="help-block">Upload a picture to represent your Event!</p>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-2 control-label">Event Tags</label>
                           <div class="col-lg-10">
+                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Programming, Robotics" />
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-2 control-label">Administrator Email</label>
+                          <div class="col-lg-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="col-lg-12 col-centered">
+                            <button type="submit" class="btn btn-danger btn-block">DELETE EVENT</button>
                           </div>
                         </div>
                       </form>
-                  </section>
-                  </div>
-                  <div class="col-lg-12">
-                    <section class="panel">
-                      <header class="panel-heading">
-                        IPA File Upload
-                      </header>
-                      <div class="panel-body">
-                        <form class="form-horizontal " method="get">
-                          <div class="form-group">
-                            <label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
-                            <div class="col-sm-10">
-                              <input type="file" id="exampleInputFile">
-                              <p class="help-block">Example block-level help text here.</p>
-                            </div>
-                          </div>
-                          <button type="submit" class="btn btn-primary pull-right">Create</button>
-                      </div>
-                  </div>
-                  </form>
+                    </div>
                   </section>
                 </div>
-                <!-- Basic Forms & Horizontal Forms-->
-                <!-- page end-->
+              </div>
+              <!-- Basic Forms & Horizontal Forms-->
+              <!-- page end-->
             </section>
             <!-- Chat Seccion-->
             <div class="col-md-2  pull-right">
@@ -259,10 +323,46 @@
                 </div>
               </div>
             </div>
-            </div>
+          </div>
     </main>
     <!--main content end-->
     </div>
 
     <!-- container section end -->
+
+
+    <!-- javascripts -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- nice scroll -->
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+
+    <!-- jquery ui -->
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+
+    <!--custom checkbox & radio-->
+    <script type="text/javascript" src="js/ga.js"></script>
+    <!--custom switch-->
+    <script src="js/bootstrap-switch.js"></script>
+    <!--custom tagsinput-->
+    <script src="js/jquery.tagsinput.js"></script>
+
+    <!-- colorpicker -->
+
+    <!-- bootstrap-wysiwyg -->
+    <script src="js/jquery.hotkeys.js"></script>
+    <script src="js/bootstrap-wysiwyg.js"></script>
+    <script src="js/bootstrap-wysiwyg-custom.js"></script>
+    <!-- ck editor -->
+    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+    <!-- custom form component script for this page-->
+    <script src="js/form-component.js"></script>
+    <!-- custome script for all page -->
+    <script src="js/scripts.js"></script>
+
+
+
 </body>
+
+</html>
