--- a/src/views/catalogue/CatalogueProjects.hbs
+++ b/src/views/catalogue/CatalogueProjects.hbs
@@ -1,3 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
+  <link rel="shortcut icon" href="img/favicon.png">
+
+  <title>Group Catalogue</title>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- bootstrap theme -->
+  <link href="css/bootstrap-theme.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/shop-item.css" rel="stylesheet">
+  <!--external css-->
+  <!-- font icon -->
+  <link href="css/elegant-icons-style.css" rel="stylesheet" />
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <!-- date picker -->
+
+  <!-- color picker -->
+
+  <!-- Custom styles -->
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-responsive.css" rel="stylesheet" />
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+  <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+      <script src="js/lte-ie7.js"></script>
+    <![endif]-->
+  <!-- Fix NavBar -->
+  <link rel="stylesheet" href="css/navbarfix.css">
+  <!-- ck editor -->
+  <script src="assets/ckeditor/ckeditor.js"></script>
+  <!-- Chat CSS and JS -->
+  <link rel="stylesheet" href="css/Chat.css">
+  <script src="js/ChatFunctionality.js"></script>
+
+
+</head>
+
 <body>
 
   <!-- Navigation -->
@@ -65,7 +115,7 @@
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
-
+             
             </ul>
           </li>
           <!-- alert notification start-->
@@ -120,7 +170,7 @@
               <input class="form-control" type="text" id="lg">
             </div>
           </li>
-
+         
         </ul>
       </div>
       <!-- notificatoin dropdown end-->
@@ -139,10 +189,10 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-briefcase"></i> Project Catalogue</h3>
+                  <h3 class="page-header"><i class="fa fa-beer"></i> Group Catalogue</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-briefcase"></i>Project Catalogue</li>
+                    <li><i class="fa fa-beer"></i>Group Catalogue</li>
                   </ol>
                 </div>
               </div>
@@ -150,7 +200,7 @@
                 <div class="col-lg-12">
                   <section class="panel">
                     <div class="panel-body bio-graph-info">
-                      <h1><i class="fa fa-briefcase"></i>Projects</h1>
+                      <h1><i class="fa fa-beer"></i>Groups</h1>
                       <hr>
                       <form class="form-horizontal" role="form">
                         <div class="form-group">
@@ -159,33 +209,34 @@
                             height="100">
                           </div>
                           <div class="col-lg-4">
-                            <h1>PIPS Project</h1>
-                            <p>Project description 1</p>
+                            <h1>PIPS Group</h1>
+                            <p>Group description 1</p>
                             <label class="control-label">Tags</label>
                             <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Software</button>
                             <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Databases</button>
                           </div>
                           <div class="col-lg-6" style="margin-top: 2%">
-                            <button type="submit" class="btn btn-primary btn pull-right">Request To Join Project</button>
+                            <button type="submit" class="btn btn-primary btn pull-right">Request To Join Group</button>
                             <br></br>
-                            <button type="submit" class="btn btn-primary btn pull-right">Follow Project</button>
+                            <button type="submit" class="btn btn-primary btn pull-right">Follow Group</button>
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="col-lg-2">
-                            <img src="img\wacky-tube-man.gif" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                            <img src="img\default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
                           </div>
                           <div class="col-lg-4">
-                            <h1>Wacky Inflatable Tube Man Simulator</h1>
-                            <p>Project description 2</p>
+                            <h1>Programmers With Attitude</h1>
+                            <p>Group description 2</p>
                             <label class="control-label">Tags</label>
-                            <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Software</button>
+                            <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Programming</button>
                             <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Gaming</button>
+                            <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Attitudes</button>
                           </div>
                           <div class="col-lg-6" style="margin-top: 2%">
-                            <button type="submit" class="btn btn-primary btn pull-right">Request To Join Project</button>
+                            <button type="submit" class="btn btn-primary btn pull-right">Request To Join Group</button>
                             <br></br>
-                            <button type="submit" class="btn btn-primary btn pull-right">Follow Project</button>
+                            <button type="submit" class="btn btn-primary btn pull-right">Follow Group</button>
                           </div>
                         </div>
                       </form>
@@ -247,4 +298,30 @@
     </main>
     </div>
     </div>
+    <!-- javascripts -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- nice scroll -->
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <!-- jquery ui -->
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+    <!--custom checkbox & radio-->
+    <script type="text/javascript" src="js/ga.js"></script>
+    <!--custom switch-->
+    <script src="js/bootstrap-switch.js"></script>
+    <!--custom tagsinput-->
+    <script src="js/jquery.tagsinput.js"></script>
+    <!-- bootstrap-wysiwyg -->
+    <script src="js/jquery.hotkeys.js"></script>
+    <script src="js/bootstrap-wysiwyg.js"></script>
+    <script src="js/bootstrap-wysiwyg-custom.js"></script>
+
+    <!-- custom form component script for this page-->
+    <script src="js/form-component.js"></script>
+    <!-- custome script for all page -->
+    <script src="js/scripts.js"></script>
+
 </body>
+
+</html>
