--- a/src/views/catalogue/CatalogueProjects.hbs
+++ b/src/views/catalogue/CatalogueProjects.hbs
@@ -14,22 +14,22 @@
   <title>Group Catalogue</title>
 
   <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href=".css/bootstrap.min.css" rel="stylesheet">
   <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
+  <link href=".css/bootstrap-theme.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link href="css/shop-item.css" rel="stylesheet">
+  <link href=".css/shop-item.css" rel="stylesheet">
   <!--external css-->
   <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <link href=".css/elegant-icons-style.css" rel="stylesheet" />
+  <link href=".css/font-awesome.min.css" rel="stylesheet" />
   <!-- date picker -->
 
   <!-- color picker -->
 
   <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
+  <link href=".css/style.css" rel="stylesheet">
+  <link href=".css/style-responsive.css" rel="stylesheet" />
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
@@ -38,12 +38,12 @@
       <script src="js/lte-ie7.js"></script>
     <![endif]-->
   <!-- Fix NavBar -->
-  <link rel="stylesheet" href="css/navbarfix.css">
+  <link rel="stylesheet" href=".css/navbarfix.css">
   <!-- ck editor -->
-  <script src="assets/ckeditor/ckeditor.js"></script>
+  <script src="..assets/ckeditor/ckeditor.js"></script>
   <!-- Chat CSS and JS -->
-  <link rel="stylesheet" href="css/Chat.css">
-  <script src="js/ChatFunctionality.js"></script>
+  <link rel="stylesheet" href=".css/Chat.css">
+  <script src="..public/js/ChatFunctionality.js"></script>
 
 
 </head>
@@ -299,28 +299,28 @@
     </div>
     </div>
     <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="..public/js/jquery.js"></script>
+    <script src="..public/js/bootstrap.min.js"></script>
     <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <script src="..public/js/jquery.scrollTo.min.js"></script>
+    <script src="..public/js/jquery.nicescroll.js" type="text/javascript"></script>
     <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+    <script src="..public/js/jquery-ui-1.9.2.custom.min.js"></script>
     <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
+    <script type="text/javascript" src="..public/js/ga.js"></script>
     <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
+    <script src="..public/js/bootstrap-switch.js"></script>
     <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
+    <script src="..public/js/jquery.tagsinput.js"></script>
     <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
+    <script src="..public/js/jquery.hotkeys.js"></script>
+    <script src="..public/js/bootstrap-wysiwyg.js"></script>
+    <script src="..public/js/bootstrap-wysiwyg-custom.js"></script>
 
     <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
+    <script src="..public/js/form-component.js"></script>
     <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
+    <script src="..public/js/scripts.js"></script>
 
 </body>
 
