Reverted HBS files since we had double headers. Tried to update the paths for the css files.

--- a/src/views/createproject/CreateProjectPage.hbs
+++ b/src/views/createproject/CreateProjectPage.hbs
@@ -1,4 +1,62 @@
 <body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand" style="padding: 8px 15px; ">
+          <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;"></div>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Profile</a>
+          </li>
+          <li>
+            <a href="#">Followers</a>
+          </li>
+
+          <li>
+            <a href="#">Interests</a>
+          </li>
+          <li>
+            <a href="#">Groups</a>
+          </li>
+          <li>
+            <a href="#">Events</a>
+          </li>
+          <li>
+            <a href="#">Community</a>
+          </li>
+          <li>
+            <a href="#">About PIPS</a>
+          </li>
+        </ul>
+        <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 13px;">
+          <div id="search">
+            <a href="" class="glyphicon glyphicon-search" style="font-size: 25px;"></a>
+          </div>
+        </li>
+        <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 10px;">
+          <div>
+            <input class="form-control" type="text" id="lg">
+          </div>
+        </li>
+      </div>
+      <!-- /.navbar-collapse -->
+      <!-- /.container -->
+  </nav>
   <!-- Page Content -->
   <div class="container">
     <!--main content start-->
@@ -8,7 +66,7 @@
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-users"></i> Create a Project Page</h3>
             <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="/">Home</a></li>
+              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="fa fa-tasks"></i>Project Pages</li>
               <li><i class="fa fa-users"></i>Create a Project Page</li>
             </ol>
