--- a/src/views/create/CreateGroupPage.hbs
+++ b/src/views/create/CreateGroupPage.hbs
@@ -1,57 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-  <link rel="shortcut icon" href="img/favicon.png">
-
-  <title>New Event</title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="css/shop-item.css" rel="stylesheet">
-  <!--external css-->
-  <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- date picker -->
-<!-- Include Bootstrap Datepicker -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
-
-
-  <!-- color picker -->
-
-  <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
-  <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-      <script src="js/lte-ie7.js"></script>
-    <![endif]-->
-
-  <!-- Fix NavBar -->
-  <link rel="stylesheet" href="css/navbarfix.css">
-  <!-- Chat CSS and JS -->
-  <link rel="stylesheet" href="css/Chat.css">
-  <script src="js/ChatFunctionality.js"></script>
-
-</head>
-
 <body>
 
   <!-- Navigation -->
@@ -119,7 +65,7 @@
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
-             
+
             </ul>
           </li>
           <!-- alert notification start-->
@@ -174,7 +120,7 @@
               <input class="form-control" type="text" id="lg">
             </div>
           </li>
-         
+
         </ul>
       </div>
       <!-- notificatoin dropdown end-->
@@ -193,11 +139,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-calendar"></i> New Event</h3>
+                  <h3 class="page-header"><i class="fa fa-beer"></i> Create a Group Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Event Pages</li>
-                    <li><i class="fa fa-calendar"></i></i> New Event</li>
+                    <li><i class="fa fa-tasks"></i>Group Pages</li>
+                    <li><i class="fa fa-beer"></i>Create a Group Page</li>
                   </ol>
                 </div>
               </div>
@@ -205,36 +151,24 @@
                 <div class="col-lg-12">
                   <section class="panel">
                     <header class="panel-heading">
-                      Event Page Form
+                      Group Page Form
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Name</label>
+                          <label class="col-sm-2 control-label">Group Name</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Administrator</label>
+                          <label class="col-sm-2 control-label">Group Administrator</label>
                           <div class="col-sm-10">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Description</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Start Date </label>
-                          <div class="col-sm-4">
-                            <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Location</label>
+                          <label class="col-sm-2 control-label">Group Description</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control">
                           </div>
@@ -246,14 +180,14 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i> Event Picture</label>
+                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Group Picture</label>
                           <div class="col-sm-10">
                             <input type="file" id="exampleInputFile">
-                            <p class="help-block">Upload a picture to represent your Event!</p>
+                            <p class="help-block">Upload a picture to represent your Group!</p>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Event Tags</label>
+                          <label class="col-lg-2 control-label">Group Tags</label>
                           <div class="col-lg-10">
                             <input name="tagsinput" id="tagsinput" class="tagsinput" value="Programming, Robotics" />
                           </div>
@@ -328,40 +262,4 @@
     </div>
 
     <!-- container section end -->
-
-
-    <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-
-    <!-- colorpicker -->
-
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-    <!-- ck editor -->
-    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
-
-
-
 </body>
-
-</html>
