--- a/src/views/edit/EditGroup.hbs
+++ b/src/views/edit/EditGroup.hbs
@@ -1,51 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-  <link rel="shortcut icon" href="img/favicon.png">
-
-  <title>Edit Group Page </title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="css/shop-item.css" rel="stylesheet">
-  <!--external css-->
-  <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- date picker -->
-
-  <!-- color picker -->
-
-  <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
-  <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-      <script src="js/lte-ie7.js"></script>
-    <![endif]-->
-
-  <!-- Fix NavBar -->
-  <link rel="stylesheet" href="css/navbarfix.css">
-  <!-- Chat CSS and JS -->
-  <link rel="stylesheet" href="css/Chat.css">
-  <script src="js/ChatFunctionality.js"></script>
-
-</head>
-
 <body>
 
   <!-- Navigation -->
@@ -113,7 +65,7 @@
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
-             
+
             </ul>
           </li>
           <!-- alert notification start-->
@@ -168,7 +120,7 @@
               <input class="form-control" type="text" id="lg">
             </div>
           </li>
-         
+
         </ul>
       </div>
       <!-- notificatoin dropdown end-->
@@ -183,35 +135,36 @@
         <div class="row ">
           <div class="col-lg-14">
             <!-- Page Content -->
+
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-calendar"></i> Edit Event Page</h3>
+                  <h3 class="page-header"><i class="fa fa-beer"></i> Edit Group Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Event Pages</li>
-                    <li><i class="fa fa-calendar"></i>Edit Event Page</li>
+                    <li><i class="fa fa-tasks"></i>Group Pages</li>
+                    <li><i class="fa fa-beer"></i>Edit Group Page</li>
                   </ol>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
-                    <header class="panel-heading">Event Summary
+                    <header class="panel-heading">Group Summary
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Name</label>
+                          <label class="col-sm-2 control-label">Group Name</label>
                           <div class="col-sm-8">
-                            <p class="form-control-static">Project-palooza</p>
+                            <p class="form-control-static">john.doe@upr.edu </p>
                           </div>
                           <div class="col-sm-2">
                             <button type="button" id="edit-button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Administrator</label>
+                          <label class="col-sm-2 control-label">Group Administrator</label>
                           <div class="col-sm-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
@@ -220,35 +173,29 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Description</label>
+                          <label class="col-sm-2 control-label">Group Description</label>
                           <div class="col-sm-8">
-                            <p class="form-control-static">Things happen in places</p>
+                            <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
                           <div class="col-sm-2">
                             <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Date</label>
-                          <div class="col-sm-8">
-                            <p class="form-control-static">10-12-2015</p>
-                          </div>
-                          <div class="col-sm-2">
-                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Event Picture</label>
+                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Group Picture</label>
+
                           <div class="col-sm-2">
                             <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
                           </div>
+
+
                           <div class="col-sm-6">
                             <input type="file" id="exampleInputFile">
-                            <p class="help-block">Upload a picture to represent your Event!</p>
+                            <p class="help-block">Upload a picture to represent your Group!</p>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-lg-2 control-label">Event Tags</label>
+                          <label class="col-lg-2 control-label">Group Tags</label>
                           <div class="col-lg-10">
                             <input name="tagsinput" id="tagsinput" class="tagsinput" value="Programming, Robotics" />
                           </div>
@@ -264,7 +211,7 @@
                         </div>
                         <div class="form-group">
                           <div class="col-lg-12 col-centered">
-                            <button type="submit" class="btn btn-danger btn-block">DELETE EVENT</button>
+                            <button type="submit" class="btn btn-danger btn-block">DELETE GROUP</button>
                           </div>
                         </div>
                       </form>
@@ -329,40 +276,4 @@
     </div>
 
     <!-- container section end -->
-
-
-    <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-
-    <!-- colorpicker -->
-
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-    <!-- ck editor -->
-    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
-
-
-
 </body>
-
-</html>
