--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,18 +4,18 @@
         <meta charset="utf-8"/>
         <title>PIPS</title>
         <!-- Bootstrap Core CSS -->
-        <link href="/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="/src/views/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- bootstrap theme -->
-        <link href="/css/bootstrap-theme.css" rel="stylesheet"/>
+        <link href="/src/views/css/bootstrap-theme.css" rel="stylesheet"/>
         <!-- Custom CSS -->
-        <link href="/css/shop-item.css" rel="stylesheet"/>
+        <link href="/src/views/css/shop-item.css" rel="stylesheet"/>
         <!--external css-->
         <!-- font icon -->
-        <link href="/css/elegant-icons-style.css" rel="stylesheet" />
-        <link href="/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="/src/views/css/elegant-icons-style.css" rel="stylesheet" />
+        <link href="/src/views/css/font-awesome.min.css" rel="stylesheet" />
         <!-- Custom styles -->
-        <link href="/css/style.css" rel="stylesheet"/>
-        <link href="/css/style-responsive.css" rel="stylesheet" />
+        <link href="/src/views/css/style.css" rel="stylesheet"/>
+        <link href="/src/views/css/style-responsive.css" rel="stylesheet" />
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
         <!--[if lt IE 9]>
         <script src="/js/html5shiv.js"></script>
@@ -23,38 +23,38 @@
         <script src="/js/lte-ie7.js"></script>
         <![endif]-->
         <!-- Fix NavBar -->
-        <link rel="stylesheet" href="../src/public/css/navbarfix.css"/>
+        <link rel="stylesheet" href="/src/views/css/navbarfix.css"/>
         <!-- ck editor -->
-        <script src="../src/assets/ckeditor/ckeditor.js"></script>
+        <script src="/src/assets/ckeditor/ckeditor.js"></script>
         <!-- javascripts -->
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/src/public/js/jquery.js"></script>
+        <script src="/src/public/js/bootstrap.min.js"></script>
         <!-- nice scroll -->
-        <script src="js/jquery.scrollTo.min.js"></script>
-        <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+        <script src="/src/public/js/jquery.scrollTo.min.js"></script>
+        <script src="/src/public/js/jquery.nicescroll.js" type="text/javascript"></script>
 
         <!-- jquery ui -->
-        <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+        <script src="/src/public/js/jquery-ui-1.9.2.custom.min.js"></script>
 
         <!--custom checkbox & radio-->
         <script type="text/javascript" src="js/ga.js"></script>
         <!--custom switch-->
-        <script src="js/bootstrap-switch.js"></script>
+        <script src="/src/public/js/bootstrap-switch.js"></script>
         <!--custom tagsinput-->
-        <script src="js/jquery.tagsinput.js"></script>
+        <script src="/src/public/js/jquery.tagsinput.js"></script>
 
         <!-- colorpicker -->
 
         <!-- bootstrap-wysiwyg -->
-        <script src="js/jquery.hotkeys.js"></script>
-        <script src="js/bootstrap-wysiwyg.js"></script>
-        <script src="js/bootstrap-wysiwyg-custom.js"></script>
+        <script src="/src/public/js/jquery.hotkeys.js"></script>
+        <script src="/src/public/js/bootstrap-wysiwyg.js"></script>
+        <script src="/src/public/js/bootstrap-wysiwyg-custom.js"></script>
         <!-- ck editor -->
         <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
         <!-- custom form component script for this page-->
-        <script src="js/form-component.js"></script>
+        <script src="/src/public/js/form-component.js"></script>
         <!-- custome script for all page -->
-        <script src="js/scripts.js"></script>
+        <script src="/src/public/js/scripts.js"></script>
     </head>
 
     <body>
