--- a/src/views/submit/SubmitSuggestions.hbs
+++ b/src/views/submit/SubmitSuggestions.hbs
@@ -1,53 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-  <link rel="shortcut icon" href="img/favicon.png">
-
-  <title>Submit Resume </title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="css/shop-item.css" rel="stylesheet">
-  <!--external css-->
-  <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- date picker -->
-
-  <!-- color picker -->
-
-  <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
-  <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-      <script src="js/lte-ie7.js"></script>
-    <![endif]-->
-  <!-- Fix NavBar -->
-  <link rel="stylesheet" href="css/navbarfix.css">
-  <!-- ck editor -->
-  <script src="assets/ckeditor/ckeditor.js"></script>
-  <!-- Chat CSS and JS -->
-  <link rel="stylesheet" href="css/Chat.css">
-  <script src="js/ChatFunctionality.js"></script>
-
-
-</head>
-
 <body>
 
  <!-- Navigation -->
@@ -115,7 +65,7 @@
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
-             
+
             </ul>
           </li>
           <!-- alert notification start-->
@@ -170,7 +120,7 @@
               <input class="form-control" type="text" id="lg">
             </div>
           </li>
-         
+
         </ul>
       </div>
       <!-- notificatoin dropdown end-->
@@ -189,11 +139,11 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-file-text-o"></i> Submit Resume</h3>
+                  <h3 class="page-header"><i class="fa fa-envelope"></i> Suggestion Box</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-users"></i>Profile</li>
-                    <li><i class="fa fa-file-text-o"></i>Submit Resume</li>
+                    <li><i class="fa fa-envelope"></i>Suggestion Box</li>
                   </ol>
                 </div>
               </div>
@@ -201,33 +151,26 @@
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
-                    <header class="panel-heading">Resume Input Field</header>
+                    <header class="panel-heading">Your Suggestions</header>
 
                     <div class="panel-body">
                       <div class="form">
                         <form action="#" class="form-horizontal">
                           <div class="form-group">
-                            <label class="col-sm-2 control-label">Username:</label>
-                            <div class="col-sm-10">
-                              <p class="form-control-static">John Doe</p>
-                            </div>
-                            <label class="col-sm-2 control-label">email:</label>
-                            <div class="col-sm-10">
-                              <p class="form-control-static">john.doe@upr.edu</p>
-                            </div>
-                          </div>
-                          <div class="form-group">
                             <div class="col-sm-9">
-                              <p>Write and submit your Resume here.<i class="fa fa-smile-o"></i></p>
+                              <p>Thank you for taking the time to send us your feedback or share suggestions regarding PIPS,
+                                any and all feedback is appreciated as we try to improve your experience.<i class="fa fa-smile-o"></i></p>
                             </div>
                           </div>
-
+                          <div class="form-group pull-left">
+                            <label class="col-sm-2 control-label ">From:</label>
+                            <div class="col-sm-10">
+                              <p class="form-control-static ">john.doe@upr.edu</p>
+                            </div>
+                          </div>
                           <div class="form-group">
                             <div class="col-lg-12">
                               <textarea class="form-control ckeditor" name="editor1" rows="10" cols="50"></textarea>
-                              <script>
-                                CKEDITOR.replace('editor1')
-                              </script>
                             </div>
                           </div>
                         </form>
@@ -294,30 +237,4 @@
     </main>
     </div>
     </div>
-    <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
-
 </body>
-
-</html>
