--- a/src/views/view/ViewAllTags.hbs
+++ b/src/views/view/ViewAllTags.hbs
@@ -1,56 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-  <link rel="shortcut icon" href="img/favicon.png">
-
-  <title>Submit Resume </title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="css/shop-item.css" rel="stylesheet">
-  <!--external css-->
-  <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- date picker -->
-
-  <!-- color picker -->
-
-  <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
-  <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-      <script src="js/lte-ie7.js"></script>
-    <![endif]-->
-  <!-- Fix NavBar -->
-  <link rel="stylesheet" href="css/navbarfix.css">
-  <!-- ck editor -->
-  <script src="assets/ckeditor/ckeditor.js"></script>
-  <!-- Chat CSS and JS -->
-  <link rel="stylesheet" href="css/Chat.css">
-  <script src="js/ChatFunctionality.js"></script>
-
-
-</head>
-
 <body>
 
- <!-- Navigation -->
+	<!-- Navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -115,7 +65,7 @@
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
-             
+
             </ul>
           </li>
           <!-- alert notification start-->
@@ -170,154 +120,133 @@
               <input class="form-control" type="text" id="lg">
             </div>
           </li>
-         
+
         </ul>
       </div>
       <!-- notificatoin dropdown end-->
     </div>
     <!-- /.container -->
   </nav>
-  <!-- Page Content -->
-  <div class="container">
-    <!--main content start-->
-    <main>
-      <div class="container-fluid ">
-        <div class="row ">
-          <div class="col-lg-14">
-            <!-- Page Content -->
+	<!-- Page Content -->
+	<div class="container">
+		<!--main content start-->
+		<main>
+			<div class="container-fluid ">
+				<div class="row ">
+					<div class="col-lg-14">
+						<!-- Page Content -->
 
-            <section class="wrapper">
-              <div class="row">
-                <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-file-text-o"></i> Submit Resume</h3>
-                  <ol class="breadcrumb">
-                    <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-users"></i>Profile</li>
-                    <li><i class="fa fa-file-text-o"></i>Submit Resume</li>
-                  </ol>
-                </div>
-              </div>
-              <!-- CKEditor -->
-              <div class="row">
-                <div class="col-lg-12">
-                  <section class="panel">
-                    <header class="panel-heading">Resume Input Field</header>
+						<section class="wrapper">
+							<div class="row">
+								<div class="col-lg-12">
+									<h3 class="page-header"><i class="fa fa-tags"></i> Tags</h3>
+									<ol class="breadcrumb">
+										<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+										<li><i class="fa fa-tags"></i>Tags</li>
 
-                    <div class="panel-body">
-                      <div class="form">
-                        <form action="#" class="form-horizontal">
-                          <div class="form-group">
-                            <label class="col-sm-2 control-label">Username:</label>
-                            <div class="col-sm-10">
-                              <p class="form-control-static">John Doe</p>
-                            </div>
-                            <label class="col-sm-2 control-label">email:</label>
-                            <div class="col-sm-10">
-                              <p class="form-control-static">john.doe@upr.edu</p>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="col-sm-9">
-                              <p>Write and submit your Resume here.<i class="fa fa-smile-o"></i></p>
-                            </div>
-                          </div>
+									</ol>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-lg-12">
+									<section class="panel">
+										<header class="panel-heading">Tag List</header>
+										<div class="panel-body">
+											<div class="form">
+												<form action="#" class="form-horizontal">
+													<div class="form-group">
+														<div class="col-sm-9">
 
-                          <div class="form-group">
-                            <div class="col-lg-12">
-                              <textarea class="form-control ckeditor" name="editor1" rows="10" cols="50"></textarea>
-                              <script>
-                                CKEDITOR.replace('editor1')
-                              </script>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                      <br/>
-                      <div class="pull-right">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                      </div>
-                    </div>
-                  </section>
-                </div>
-              </div>
-            </section>
+															<table class="table">
+																<thead>
+																	<tr>
+																		<th>Tagged Content</th>
+																		<th>Tag</th>
+																	</tr>
+																</thead>
+																<tbody>
+																	<tr>
+																		<td>1</td>
+																		<td>
+																			<button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Science</button>
+																		</td>
+																	</tr>
+																	<tr>
+																		<td>4</td>
+																		<td>
+																			<button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Robotics</button>
+																		</td>
+																	</tr>
+																	<tr>
+																		<td>17</td>
+																		<td>
+																			<button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Swag</button>
+																		</td>
+																	</tr>
+																</tbody>
+															</table>
+														</div>
+													</div>
+											</div>
+											</form>
+										</div>
+										<br/>
+								</div>
+								</section>
+							</div>
+					</div>
+					</section>
 
-            <!-- Chat Seccion-->
-            <div class="col-md-2  pull-right">
-              <div class="chat-sidebar">
-                <div class="sidebar-name">
-                  <!-- Pass username and display name to register popup -->
-                  <a href="javascript:register_popup('narayan-prusty', 'Narayan Prusty');">
-                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
-                    />
-                    <span>Narayan Prusty</span>
-                  </a>
-                </div>
-                <div class="sidebar-name">
-                  <a href="javascript:register_popup('qnimate', 'QNimate');">
-                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
-                    />
-                    <span>QNimate</span>
-                  </a>
-                </div>
-                <div class="sidebar-name">
-                  <a href="javascript:register_popup('qscutter', 'QScutter');">
-                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
-                    />
-                    <span>QScutter</span>
-                  </a>
-                </div>
-                <div class="sidebar-name">
-                  <a href="javascript:register_popup('qidea', 'QIdea');">
-                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
-                    />
-                    <span>QIdea</span>
-                  </a>
-                </div>
-                <div class="sidebar-name">
-                  <a href="javascript:register_popup('qazy', 'QAzy');">
-                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
-                    />
-                    <span>QAzy</span>
-                  </a>
-                </div>
-                <div class="sidebar-name">
-                  <a href="javascript:register_popup('qblock', 'QBlock');">
-                    <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
-                    />
-                    <span>QBlock</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-    </main>
-    </div>
-    </div>
-    <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-    <!-- jquery ui -->
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-    <!--custom checkbox & radio-->
-    <script type="text/javascript" src="js/ga.js"></script>
-    <!--custom switch-->
-    <script src="js/bootstrap-switch.js"></script>
-    <!--custom tagsinput-->
-    <script src="js/jquery.tagsinput.js"></script>
-    <!-- bootstrap-wysiwyg -->
-    <script src="js/jquery.hotkeys.js"></script>
-    <script src="js/bootstrap-wysiwyg.js"></script>
-    <script src="js/bootstrap-wysiwyg-custom.js"></script>
-
-    <!-- custom form component script for this page-->
-    <script src="js/form-component.js"></script>
-    <!-- custome script for all page -->
-    <script src="js/scripts.js"></script>
-
+					<!-- Chat Seccion-->
+					<div class="col-md-2  pull-right">
+						<div class="chat-sidebar">
+							<div class="sidebar-name">
+								<!-- Pass username and display name to register popup -->
+								<a href="javascript:register_popup('narayan-prusty', 'Narayan Prusty');">
+									<img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+									/>
+									<span>Narayan Prusty</span>
+								</a>
+							</div>
+							<div class="sidebar-name">
+								<a href="javascript:register_popup('qnimate', 'QNimate');">
+									<img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+									/>
+									<span>QNimate</span>
+								</a>
+							</div>
+							<div class="sidebar-name">
+								<a href="javascript:register_popup('qscutter', 'QScutter');">
+									<img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+									/>
+									<span>QScutter</span>
+								</a>
+							</div>
+							<div class="sidebar-name">
+								<a href="javascript:register_popup('qidea', 'QIdea');">
+									<img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+									/>
+									<span>QIdea</span>
+								</a>
+							</div>
+							<div class="sidebar-name">
+								<a href="javascript:register_popup('qazy', 'QAzy');">
+									<img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+									/>
+									<span>QAzy</span>
+								</a>
+							</div>
+							<div class="sidebar-name">
+								<a href="javascript:register_popup('qblock', 'QBlock');">
+									<img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+									/>
+									<span>QBlock</span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+		</main>
+		</div>
+	</div>
 </body>
-
-</html>
