Added route js for new page.

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -86,7 +86,7 @@
             <a href="/profile"><i class="fa fa-user"></i> Profile</a>
           </li>
           <li>
-            <a href="/fix"><i class="fa fa-users"></i> Followers</a>
+            <a href="/cataloguefollowers"><i class="fa fa-users"></i> Followers</a>
           </li>
           <li>
             <a href="/catalogueprojects"><i class="fa fa-briefcase"></i> Projects</a>
