Completed CatalogueFollowers page Updated CatalogueEvents, it had the chat section as well as the former header. Renamed pips_logo file

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -74,7 +74,7 @@
           <span class="icon-bar"></span>
         </button>
         <div class="navbar-brand" style="padding: 8px 15px; ">
-          <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;">
+          <img src="img/pips_logo.jpg" style="width: 40px;">
         </div>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
