--- a/src/views/catalogue/CatalogueFollowers.hbs
+++ b/src/views/catalogue/CatalogueFollowers.hbs
@@ -19,43 +19,19 @@
               <div class="col-lg-12">
                 <section class="panel">
                   <div class="panel-body bio-graph-info">
-                    <h1><i class="fa fa-users"></i>Groups</h1>
+                    <h1><i class="fa fa-users"></i>Followers</h1>
                     <hr>
                     <form class="form-horizontal" role="form">
                       <div class="form-group">
-                        <div class="col-lg-2">
-                          <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
-                          height="100">
+                        <div class="col-lg-1">
+                          <img src="img\pips_logo.jpg" class="img-circle img-responsive" alt="placeholder" width="50"
+                          height="50">
                         </div>
                         <div class="col-lg-4">
-                          <h1>PIPS Group</h1>
-                          <p>Group description 1</p>
-                          <label class="control-label">Tags</label>
-                          <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Software</button>
-                          <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Databases</button>
+                          <a href="/viewprofile"><h1>Bob</h1></a>
                         </div>
-                        <div class="col-lg-6" style="margin-top: 2%">
-                          <button type="submit" class="btn btn-primary btn pull-right">Request To Join Group</button>
-                          <br></br>
-                          <button type="submit" class="btn btn-primary btn pull-right">Follow Group</button>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-lg-2">
-                          <img src="img\default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
-                        </div>
-                        <div class="col-lg-4">
-                          <h1>Programmers With Attitude</h1>
-                          <p>Group description 2</p>
-                          <label class="control-label">Tags</label>
-                          <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Programming</button>
-                          <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Gaming</button>
-                          <button type="button" class="btn btn-success"><i class="fa fa-tag"></i>Attitudes</button>
-                        </div>
-                        <div class="col-lg-6" style="margin-top: 2%">
-                          <button type="submit" class="btn btn-primary btn pull-right">Request To Join Group</button>
-                          <br></br>
-                          <button type="submit" class="btn btn-primary btn pull-right">Follow Group</button>
+                        <div class="col-lg-7" style="margin-top: 2%">
+                          <button type="submit" class="btn btn-danger btn pull-right">Unfollow</button>
                         </div>
                       </div>
                     </form>
