--- a/src/views/catalogue/CatalogueGroups.hbs
+++ b/src/views/catalogue/CatalogueGroups.hbs
@@ -24,7 +24,7 @@
                     <form class="form-horizontal" role="form">
                       <div class="form-group">
                         <div class="col-lg-2">
-                          <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                          <img src="img\pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                           height="100">
                         </div>
                         <div class="col-lg-4">
