Some work on json and viewtags, nothing complete.

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -46,7 +46,8 @@
         <!--custom tagsinput-->
         <script src="js/jquery.tagsinput.js"></script>
 
-        <!-- colorpicker -->
+        <!-- json things -->
+        <script src="json/tags.json"></script>
 
         <!-- bootstrap-wysiwyg -->
         <script src="js/jquery.hotkeys.js"></script>
