--- a/src/views/view/ViewAllTags.hbs
+++ b/src/views/view/ViewAllTags.hbs
@@ -7,7 +7,6 @@
 				<div class="row ">
 					<div class="col-lg-14">
 						<!-- Page Content -->
-
 						<section class="wrapper">
 							<div class="row">
 								<div class="col-lg-12">
@@ -15,7 +14,6 @@
 									<ol class="breadcrumb">
 										<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
 										<li><i class="fa fa-tags"></i>Tags</li>
-
 									</ol>
 								</div>
 							</div>
@@ -37,24 +35,26 @@
 																	</tr>
 																</thead>
 																<tbody>
-																	<tr>
-																		<td>1</td>
-																		<td>
-																			<button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Science</button>
-																		</td>
-																	</tr>
-																	<tr>
-																		<td>4</td>
-																		<td>
-																			<button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Robotics</button>
-																		</td>
-																	</tr>
-																	<tr>
-																		<td>17</td>
-																		<td>
-																			<button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Swag</button>
-																		</td>
-																	</tr>
+                                                                    <script>
+																		var tagList = require('./tags.json')
+
+																		
+																		tagList.tags.forEach(function(item) { 
+																		
+																		document.write("<tr>") 
+																		
+																		document.write("<td>item.count</td>")
+																		
+																		document.write("<td>")
+																		
+																		document.write("<p>Quack</p>")
+																		
+																		document.write("/td")
+																		
+																		document.write("</tr>")	
+																		
+																		}
+																		 </script>
 																</tbody>
 															</table>
 														</div>
