fixed all image /

--- a/src/views/catalogue/CatalogueFollowers.hbs
+++ b/src/views/catalogue/CatalogueFollowers.hbs
@@ -24,7 +24,7 @@
                     <form class="form-horizontal" role="form">
                       <div class="form-group">
                         <div class="col-lg-1">
-                          <img src="img\pips_logo.jpg" class="img-circle img-responsive" alt="placeholder" width="50"
+                          <img src="img/pips_logo.jpg" class="img-circle img-responsive" alt="placeholder" width="50"
                           height="50">
                         </div>
                         <div class="col-lg-4">
