--- a/src/views/page/EventPage.hbs
+++ b/src/views/page/EventPage.hbs
@@ -216,7 +216,7 @@
                                 <div class="form-group">
                                   <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Event Picture</label>
                                   <div class="col-sm-2">
-                                    <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
+                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
                                   </div>
                                   <div class="col-sm-6">
                                     <input type="file" id="exampleInputFile">
