--- a/src/views/catalogue/CatalogueEvents.hbs
+++ b/src/views/catalogue/CatalogueEvents.hbs
@@ -24,7 +24,7 @@
                       <form class="form-horizontal" role="form">
                         <div class="form-group">
                           <div class="col-lg-2">
-                            <img src="img\pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                            <img src="img/pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                             height="100">
                           </div>
                           <div class="col-lg-5">
@@ -45,7 +45,7 @@
                         </div>
                         <div class="form-group">
                           <div class="col-lg-2">
-                            <img src="img\12048798_10153709166102375_1827324476_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                            <img src="img/12048798_10153709166102375_1827324476_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                             height="100">
                           </div>
                           <div class="col-lg-5">
