--- a/src/views/catalogue/CatalogueGroups.hbs
+++ b/src/views/catalogue/CatalogueGroups.hbs
@@ -24,7 +24,7 @@
                     <form class="form-horizontal" role="form">
                       <div class="form-group">
                         <div class="col-lg-2">
-                          <img src="img\pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                          <img src="img/pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                           height="100">
                         </div>
                         <div class="col-lg-4">
@@ -42,7 +42,7 @@
                       </div>
                       <div class="form-group">
                         <div class="col-lg-2">
-                          <img src="img\default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                          <img src="img/default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
                         </div>
                         <div class="col-lg-4">
                           <h1>Programmers With Attitude</h1>
