--- a/src/views/edit/EditGroup.hbs
+++ b/src/views/edit/EditGroup.hbs
@@ -57,7 +57,7 @@
                           <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Group Picture</label>
 
                           <div class="col-sm-2">
-                            <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
+                            <img src="img/12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
                           </div>
 
 
