--- a/src/views/page/ProfilePage.hbs
+++ b/src/views/page/ProfilePage.hbs
@@ -345,7 +345,7 @@
                               <form class="form-horizontal" role="form">
                                 <div class="form-group">
                                   <div class="col-lg-2">
-                                    <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                                     height="100">
                                   </div>
                                   <h1>PIPS Team</h1>
@@ -353,7 +353,7 @@
                                 </div>
                                 <div class="form-group">
                                   <div class="col-lg-2">
-                                    <img src="img\default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                                    <img src="img/default-placeholder.png" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
                                   </div>
                                   <h1>Programmers with Attitude</h1>
                                   <p>Group description 2</p>
@@ -372,7 +372,7 @@
                               <form class="form-horizontal" role="form">
                                 <div class="form-group">
                                   <div class="col-lg-2">
-                                    <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                                    <img src="img/12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                                     height="100">
                                   </div>
                                   <h1>PIPS Project</h1>
@@ -380,7 +380,7 @@
                                 </div>
                                 <div class="form-group">
                                   <div class="col-lg-2">
-                                    <img src="img\wacky-tube-man.gif" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                                    <img src="img/wacky-tube-man.gif" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
                                   </div>
                                   <h1>Wacky Inflatable Tube Man Simulator</h1>
                                   <p>Group description 2</p>
