making sure documents work

--- a/src/views/page/LoginPage.html
+++ b/src/views/page/LoginPage.html
@@ -67,6 +67,7 @@
       <div class="login-wrap">
         <div>
           <p><b>Sign-Up or Login(fix): </p>
+          <script src="js/LoginPage.js"></script>
           <hr>
         </div>
         <div class="input-group">
