--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -110,7 +110,7 @@
                 <span class="profile-ava">
                     <img alt="" src="img/avatar1_small.jpg">
               </span>
-                <span class="username">Jenifer Smith</span>
+                <span class="username"><%= profile_name %></span>
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu extended logout">
@@ -119,7 +119,10 @@
                   <a href="#"><i class="icon_clock_alt"></i> Account Settings</a>
                 </li>
                 <li>
-                  <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                  <form action="/logout" method="POST">
+                    <button href="#"><i class="icon_key_alt"  type="submit"></i> Log Out</button>
+                  </form>
+                  
                 </li>
 
               </ul>
