--- a/src/views/submit/SubmitResumePage.html
+++ b/src/views/submit/SubmitResumePage.html
@@ -59,7 +59,6 @@
 </head>
 
 <body>
-
   <!-- Navigation -->
   <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
@@ -205,7 +204,6 @@
           <div class="col-lg-12">
             <section class="panel">
               <header class="panel-heading">Resume Input Field</header>
-
               <div class="panel-body">
                 <div class="form">
                   <form action="#" class="form-horizontal">
@@ -220,9 +218,11 @@
                   </form>
                 </div>
                 <br/>
-                <div class="pull-right">
-                  <button type="submit" class="btn btn-primary">Create</button>
-                </div>
+                <form method="POST" action="/submitR">
+                  <div class="pull-right">
+                    <button type="submit" class="btn btn-primary">Create</button>
+                  </div>
+                </form>
               </div>
             </section>
           </div>
@@ -232,5 +232,4 @@
   </div>
   </div>
 </body>
-
 </html>
