Prepping DB connection for CreateAccount.

--- a/src/views/create/CreateAccountPage.html
+++ b/src/views/create/CreateAccountPage.html
@@ -63,7 +63,7 @@
 <body class="login-img3-body">
   <div class="container">
     <br></br>
-    <form class="login-form" action="index.html">
+    <form method="POST" class="login-form" action="/createAcc">
       <div class="login-wrap">
         <div>
           <p><b>Account Information</p>
@@ -71,11 +71,11 @@
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-user"></i></span>
-          <input class="form-control requeired " id="email" name="email" type="email" placeholder="Email" />
+          <input class="form-control requeired " id="email" name="Email" type="email" placeholder="Email" />
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-key"></i></span>
-          <input  type="password"  class="form-control  " id="password" name="password"  placeholder="Password" />
+          <input  type="password"  class="form-control  " id="password" name="Password"  placeholder="Password" />
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-key"></i></span>
