--- a/src/views/page/LoginPage.html
+++ b/src/views/page/LoginPage.html
@@ -84,7 +84,7 @@
           <input type="checkbox" value="remember-me"> Remember me
           <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
         </label>
-        <button  class="btn btn-primary btn-lg btn-block"  type="submit" onclick="login_click()">Login</button>
+        <button  class="btn btn-primary btn-lg btn-block"  type="submit" >Login</button>
         <a href="createaccount" class="btn btn-info btn-lg btn-block" >Signup</a>
       </div>
     </form>
